fixed messages visibility

--- a/assets/scss/nav/_messages.scss
+++ b/assets/scss/nav/_messages.scss
@@ -1,6 +1,7 @@
 @import '../generals/variables';
 
 .message_container{
+    visibility: hidden;
     position: fixed;
     top: 10%;
     left: 50%;
